src/test/ui/regions/regions-undeclared.stderr
error[E0261]: use of undeclared lifetime name `'blk`
  --> $DIR/regions-undeclared.rs:1:14
   |
LL | static c_x: &'blk isize = &22; //~ ERROR use of undeclared lifetime name `'blk`
   |              ^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:4:10
   |
LL |     Foo(&'a isize), //~ ERROR use of undeclared lifetime name `'a`
   |          ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:5:10
   |
LL |     Bar(&'a isize), //~ ERROR use of undeclared lifetime name `'a`
   |          ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:8:15
   |
LL | fn fnDecl(x: &'a isize, //~ ERROR use of undeclared lifetime name `'a`
   |               ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:9:15
   |
LL |           y: &'a isize) //~ ERROR use of undeclared lifetime name `'a`
   |               ^^ undeclared lifetime

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0261`.
